Bug 162480 - Insert->Text from File crashes Writer for files with text box anchored to table cells other than A1
Summary: Insert->Text from File crashes Writer for files with text box anchored to tab...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1 target:24...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-15 07:54 UTC by Mike Kaganski
Modified: 2024-10-02 02:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A text box attached to a cell in table's second column (2.69 KB, application/vnd.oasis.opendocument.text)
2024-08-15 07:54 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-08-15 07:54:48 UTC
Created attachment 195835 [details]
A text box attached to a cell in table's second column

Create a new Writer document, and Insert->Text from File, using the attached file.

=> Crash
Comment 1 Mike Kaganski 2024-08-15 10:21:10 UTC
https://gerrit.libreoffice.org/c/core/+/171898
Comment 2 Commit Notification 2024-08-15 13:01:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cd740ff560a88a62bc79f5ea5b92bdadf71ba728

tdf#162480: Make sure to use correct anchor point for text box creation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-20 08:36:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4b199da89252b5333558f39d402cdd624b5fd338

tdf#162480: Make sure to use correct anchor point for text box creation

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-08-27 11:22:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/eafe413cd23af4c7ac7de299c51ca436f5aab596

tdf#162480: Make sure to use correct anchor point for text box creation

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-02 10:49:11 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-6":

https://git.libreoffice.org/core/commit/6033b918ac4cbb5dc56ca8064dcc11942ef7a949

tdf#162480: Make sure to use correct anchor point for text box creation

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.